news/events section

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -847,3 +847,15 @@ $news-events-intro-text-size-desktop = rem(18px)
 $news-events-intro-text-color = $navy
 
 
+// ------------------------------------------------------
+// ------ LANDING PAGE - NEWS/EVENTS
+// ------ NAV/FILTER BLOCK
+
+$news-events-filter-background = $background-gray
+$news-events-filter-label-color = $navy
+$news-events-filter-label-size-mobile = rem(16px)
+$news-events-filter-label-size-desktop = rem(12.5px)
+$news-events-filter-label-transform = uppercase
+
+
+
