--- a/src/styles/site/_news-events-landing.styl
+++ b/src/styles/site/_news-events-landing.styl
@@ -47,17 +47,84 @@
     lost-offset: 2/36
     lost-flex-container: row
 
+
 #news-events--articles-list
   > article
     lost-waffle: 1/3
 
 
-
+#news-events--nav
 .news-events--featured-article
   margin-bottom rem(28px)
   +above(m)
     margin-bottom rem(31px)
 
+
+
+#news-events--nav
+  background-color $news-events-filter-background
+
+  .news-events--nav--filter-row
+    +above(m)
+      lost-flex-container: row
+      width 100%
+      > label
+        lost-column 3/36
+        text-align right
+        font-size $news-events-filter-label-size-desktop
+        display: flex
+        justify-content: center
+        flex-direction: column
+      > .news-events--nav--filters
+        lost-column 32/36
+        lost-flex-container: row
+
+    input[type="checkbox"] + label::before
+    input[type="radio"] + label::before
+      display none
+    > label
+      color $news-events-filter-label-color = $navy
+      display inline-block
+      font-size $news-events-filter-label-size-mobile
+      font-weight bold
+      text-transform $news-events-filter-label-transform
+      vertical-align middle
+
+    ul
+    form
+      padding 0
+      width 100%
+
+    ul
+      +above(m)
+        display: flex
+        flex-flow: row nowrap
+        &.news-events--nav--filters--type
+          align-items: stretch
+          li
+            flex-grow: 1
+        &.news-events--nav--filters--date
+          width 70%
+          align-items: stretch
+          li
+            flex-grow: 1
+
+      li
+        display block
+        +above(m)
+          display inline-block
+          margin 0 rem(10px)
+
+        a
+        input[type=submit]
+          button()
+          display block
+          padding-top ($button-padding * 0.8)
+          padding-bottom ($button-padding * 0.8)
+
+
+
+.news-events--featured-article
   > article
     position relative
 
