quick placeholder templates for news types

--- a/templates/structure/news-events/_block-share.twig
+++ b/templates/structure/news-events/_block-share.twig
@@ -1,4 +1,7 @@
-{%- set image = entry.primaryImage.one() -%}
+{%- set image = null -%}
+{% if entry.primaryImage | length %}
+  {%- set image = entry.primaryImage.one() -%}
+{% endif %}
 <span>
   <input type="checkbox">
   <i>Share</i>
