--- a/templates/structure/news-events/_entry.twig
+++ b/templates/structure/news-events/_entry.twig
@@ -10,9 +10,9 @@
 {# HEADER IMAGE #}
 {% block headerBlock %}
 
-  {% if entry.type == 'article' %}
+  {# {% if entry.type == 'article' %} #}
     {% include "structure/news-events/_header-image" %}
-  {% endif %}
+  {# {% endif %} #}
 
 {% endblock %}
 
