--- a/src/styles/modules/_header-image-block.styl
+++ b/src/styles/modules/_header-image-block.styl
@@ -22,8 +22,9 @@
     line-height 0
     margin 0
     z-index 0
-    img
-      @extend $lazy-load
+    &:not(.no-image)
+      img
+        @extend $lazy-load
 
   figure.desktop
     display none
