--- a/src/styles/inc/_buttons.styl
+++ b/src/styles/inc/_buttons.styl
@@ -1,25 +1,26 @@
-button()
-  background-color $button-background
+button($bg=$button-background, $bg-hover=$button-hover-background, $color=$button-text-color, $color-hover=$button-text-color, $fs=$button-font-size, $lh=$button-line-height, $pad=$button-padding, $transform=$button-transform, $align=center)
+  background-color $bg
   border 0 none
   border-radius 0
   box-shadow $button-box-shadow
-  color $button-text-color
+  color $color
   cursor pointer
   font-family $button-font
-  font-size $button-font-size
+  font-size $fs
   font-weight $button-font-weight
   display inline-block
-  line-height $button-line-height
-  padding $button-padding
-  text-align center
+  line-height $lh
+  padding $pad
+  text-align $align
   text-decoration none
-  text-transform $button-transform
+  text-transform $transform
   transition $button-transition
   vertical-align: middle
-
+  
   &:hover
-    background-color $button-hover-background
+    background-color $bg-hover
     box-shadow $button-hover-box-shadow
+    color $color-hover
     text-decoration none
 
 
