--- a/templates/singles/about/index.twig
+++ b/templates/singles/about/index.twig
@@ -17,6 +17,6 @@
 {# MAIN COLUMN CONTENT #}
 {% block content %}
 
-<h1>{{ entry.title }}</h1>
+<h1>{{ entry.title | typogrify }}</h1>
 
 {% endblock %}
