--- a/templates/layouts/base/_core.twig
+++ b/templates/layouts/base/_core.twig
@@ -13,11 +13,24 @@
 <meta name="theme-color" content="#ffffff">
 
 {# Base #}
-{% do view.registerCssFile(craft.stamp.er('/assets/css/master.css')) %}
+{% do view.registerCssFile('//fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i|Playfair+Display:400,400i,700,700i|Source+Sans+Pro:400,400i,600,600i,700,700i') %}
+
+{% if craft.config.craftEnv == 'local' %}
+  {% do view.registerCssFile('/assets/css/master.css') %}
+{% else %}
+  {% do view.registerCssFile(craft.stamp.er('/assets/css/master.css')) %}
+{% endif %}
 
 {% do view.registerJsFile('//code.jquery.com/jquery-3.2.1.min.js') %}
-{% do view.registerJsFile('//speedfont.com/api?key=qCWgzVFVUilK') %}
-{% do view.registerJsFile(craft.stamp.er('/assets/js/scripts.js')) %}
+
+{% if craft.config.craftEnv == 'local' %}
+  {% do view.registerJsFile('/assets/js/scripts.js') %}
+{% else %}
+  {% do view.registerJsFile('//speedfont.com/api?key=qCWgzVFVUilK') %}
+  {% do view.registerJsFile(craft.stamp.er('/assets/js/scripts.js')) %}
+{% endif %}
+
+{% do view.registerAssetBundle('\\pinfirestudios\\yii2bugsnag\\BugsnagAsset') %}
 
 {{ head() }}
 
