--- a/src/styles/modules/_pagination.styl
+++ b/src/styles/modules/_pagination.styl
@@ -28,9 +28,20 @@
 
   > a
     min-width rem(122.5px)
+    &.previous
+      margin: 0 auto 0 0
+    &.next
+      margin: 0 0 0 auto
+    +above(m)
+      &.previous
+      &.next
+        margin 0
 
   .page-numbers
+    display none
     margin 0 auto
+    +above(m)
+      display block
 
     > span.current
     > a
