--- a/templates/layouts/base/_core.twig
+++ b/templates/layouts/base/_core.twig
@@ -15,7 +15,7 @@
 {# Base #}
 {% do view.registerCssFile('//fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i|Playfair+Display:400,400i,700,700i|Source+Sans+Pro:400,400i,600,600i,700,700i') %}
 
-{% if craft.config.craftEnv == 'local' %}
+{% if craft.app.config.general.craftEnv == 'local' %}
   {% do view.registerCssFile('/assets/css/master.css') %}
 {% else %}
   {% do view.registerCssFile(craft.stamp.er('/assets/css/master.css')) %}
@@ -23,7 +23,7 @@
 
 {% do view.registerJsFile('//code.jquery.com/jquery-3.2.1.min.js') %}
 
-{% if craft.config.craftEnv == 'local' %}
+{% if craft.app.config.general.craftEnv == 'local' %}
   {% do view.registerJsFile('/assets/js/scripts.js') %}
 {% else %}
   {% do view.registerJsFile('//speedfont.com/api?key=qCWgzVFVUilK') %}
